@@ -22,14 +22,14 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  */
-const char sccsid[] = "@(#)lex.sl	2.9 (gritter) 11/27/05";
+const char sccsid[] = "@(#)lex.sl	2.10 (gritter) 9/23/06";
 const char pkg[] = "Heirloom Development Tools";
-const char rel[] = "2.9 (gritter) 11/27/05";
+const char rel[] = "2.10 (gritter) 9/23/06";
 /* SLIST */
 /*
 allprint.c: * Sccsid @(#)allprint.c	1.4 (gritter) 11/27/05
 getopt.c: * Sccsid @(#)getopt.c	1.8 (gritter) 8/2/05
-header.c: * Sccsid @(#)header.c	1.11 (gritter) 11/26/05
+header.c: * Sccsid @(#)header.c	1.12 (gritter) 9/23/06
 ldefs.c: * Sccsid @(#)ldefs.c	1.5 (gritter) 11/26/05
 libmain.c: * Sccsid @(#)libmain.c	1.4 (gritter) 11/26/05
 lsearch.c: * Sccsid @(#)lsearch.c	1.4 (gritter) 11/26/05
